unpackaged/main/default/objects/n2de__Distributor__c/n2de__Distributor__c.object-meta.xml
<CustomObject>
    <description>Team assignment distributors</description>
    <label>Distributor</label>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>