unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Algorithm__c.field-meta.xml
<CustomField>
    <fullName>n2de__Algorithm__c</fullName>
    <inlineHelpText>The method of distribution this distributor or trigger will use to distribute objects to team members.</inlineHelpText>
    <label>Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round robin</fullName>
            </value>
            <value>
                <fullName>Round robin weighted</fullName>
            </value>
            <value>
                <fullName>Round robin sticky assignment</fullName>
            </value>
            <value>
                <fullName>Round robin lookup owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>