unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Assign_by_status_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_by_status_field_name__c</fullName>
    <inlineHelpText>A picklist field on the object used as a status in an assignment by status.</inlineHelpText>
    <label>Status Field for Assign by Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>