unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Assign_by_status_ready_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_by_status_ready_value__c</fullName>
    <inlineHelpText>Value for Ready for distribution status for an assignment by status.</inlineHelpText>
    <label>Ready for distribution Status value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>