unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Assign_on_OOO__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_on_OOO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, records will still be assigned when a team member is out of office.</inlineHelpText>
    <label>Assign on OoO</label>
    <type>Checkbox</type>
</CustomField>