unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Campaign_filter_ids__c.field-meta.xml
<CustomField>
    <fullName>n2de__Campaign_filter_ids__c</fullName>
    <label>Campaign filter ids</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>