unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Criteria_based_caps_filter_soql__c.field-meta.xml
<CustomField>
    <fullName>n2de__Criteria_based_caps_filter_soql__c</fullName>
    <label>Criteria-based caps filter soql</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>