unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Criteria_based_caps_ui_config__c.field-meta.xml
<CustomField>
    <fullName>n2de__Criteria_based_caps_ui_config__c</fullName>
    <label>Criteria-based caps ui config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>