unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Default_owner_queue_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_owner_queue_id__c</fullName>
    <inlineHelpText>Queue used for default owner assignment.</inlineHelpText>
    <label>Default owner queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>