unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Default_owner_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_owner_type__c</fullName>
    <inlineHelpText>The queue or user to which leads or cases will be assigned if the trigger cannot distribute because the assigned owner cannot be found as an available team member. Note: in this event no distribution logging will occur.</inlineHelpText>
    <label>Default owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>