unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Default_owner_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_owner_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User used for default owner assignment.</inlineHelpText>
    <label>Default owner user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributors_defaultowner</relationshipName>
    <type>Lookup</type>
</CustomField>