unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Distribute_from_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribute_from_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce user that this distributor will distribute objects from.</inlineHelpText>
    <label>Distribute from user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>