unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Distribution_control__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_control__c</fullName>
    <inlineHelpText>The capping method used to limit the number or total value of records distributed to team members.</inlineHelpText>
    <label>Distribution control cap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Half hourly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Load balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>