unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Distribution_control_member_cap__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_control_member_cap__c</fullName>
    <inlineHelpText>The cap, in number of objects, that is applied to members of the team based upon the selected distribution control.</inlineHelpText>
    <label>Member cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>