unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Distributor_runtime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_runtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor runtime</label>
    <referenceTo>n2de__Distributor_runtime__c</referenceTo>
    <relationshipLabel>Distributors</relationshipLabel>
    <relationshipName>Distributor_runtime</relationshipName>
    <type>Lookup</type>
</CustomField>