unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Dynamic_owner_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Dynamic_owner_field_name__c</fullName>
    <inlineHelpText>The formula field containing owner Id that will be used for dynamic distribution of this object</inlineHelpText>
    <label>Dynamic owner formula</label>
    <length>60</length>
    <type>Text</type>
</CustomField>