unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Email_notifications_disabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Email_notifications_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, disables email notifications from the standard Engine workflow rule</inlineHelpText>
    <label>Disable standard email notifications</label>
    <type>Checkbox</type>
</CustomField>