unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Execution_order__c.field-meta.xml
<CustomField>
    <fullName>n2de__Execution_order__c</fullName>
    <inlineHelpText>The order of execution of this distributor within the team in relation to other distributors in the team.</inlineHelpText>
    <label>Execution order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>