unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Field_to_update_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_to_update_name__c</fullName>
    <inlineHelpText>When selected, the name of the object field whose value should be changed when an object is distributed to a team member.</inlineHelpText>
    <label>Field to update (Deprecated)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>