unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Field_to_update_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_to_update_type__c</fullName>
    <label>Field to update type (Deprecated)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>