unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Field_to_update_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_to_update_value__c</fullName>
    <inlineHelpText>The value the field to update should be changed to when an object is distributed.</inlineHelpText>
    <label>Field to update value (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>