unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Filter_by_campaign__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_by_campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter by campaign</label>
    <type>Checkbox</type>
</CustomField>