unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Filter_logic__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_logic__c</fullName>
    <label>Filter logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>