unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Filter_soql_string__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_soql_string__c</fullName>
    <inlineHelpText>The SOQL condition expression that will be used to filter this distributor. The expression must follow SOQL condition syntax and only the condition expression section is valid. Any other SOQL syntax is not valid, including the &#39;where&#39; keyword.</inlineHelpText>
    <label>Advanced filter expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>