unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Ignore_team_level_caps__c.field-meta.xml
<CustomField>
    <fullName>n2de__Ignore_team_level_caps__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow number of assignments from this distributor to exceed the team-level caps</inlineHelpText>
    <label>Ignore team-level caps</label>
    <type>Checkbox</type>
</CustomField>