unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_active__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When active, object records will be distributed to team members.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>