unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_advanced_filter__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_advanced_filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, enables advanced SOQL filter mode. Note: for advanced users, requires familiarity with SOQL language syntax</inlineHelpText>
    <label>Advanced filter mode</label>
    <type>Checkbox</type>
</CustomField>