unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_alert__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, any SLAs that have been specified for the team will be active for this distributor. Uncheck to disable for this distributor.</inlineHelpText>
    <label>SLAs enabled</label>
    <type>Checkbox</type>
</CustomField>