unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_all_members__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_all_members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is all members</label>
    <type>Checkbox</type>
</CustomField>