unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_auto_reassign__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_auto_reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked object records will be re-assigned to a specified queue or user when the distribution of that record hits an SLA.</inlineHelpText>
    <label>Auto re-assign enabled</label>
    <type>Checkbox</type>
</CustomField>