unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_distributor_category__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_distributor_category__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, enables the selection of a distributor filter.</inlineHelpText>
    <label>Filter enabled</label>
    <type>Checkbox</type>
</CustomField>