unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_excluding_users_by_field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_excluding_users_by_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the distributor prevent assignment to users based on a field on the distributed object?</description>
    <label>Is excluding users by field</label>
    <type>Checkbox</type>
</CustomField>