unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_filter_logic__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_filter_logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter logic enabled</label>
    <type>Checkbox</type>
</CustomField>