unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_member_filter__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_member_filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, enables selection of a member filter.</inlineHelpText>
    <label>Member filter enabled</label>
    <type>Checkbox</type>
</CustomField>