unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_reassign_to_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_reassign_to_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, allows objects to be re-assigned to a selected Salesforce user instead of a queue.</inlineHelpText>
    <label>Re-assign to user enabled</label>
    <type>Checkbox</type>
</CustomField>