unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_reject_to_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_reject_to_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject to user</label>
    <type>Checkbox</type>
</CustomField>