unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_rejection_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_rejection_enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rejection enabled</label>
    <type>Checkbox</type>
</CustomField>