unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_respect_distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_respect_distribution_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, pull distributors will not allow team members to pull outside of hours.</inlineHelpText>
    <label>Respect distribution hours</label>
    <type>Checkbox</type>
</CustomField>