unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_round_robin_disabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_round_robin_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, round robin will not be performed when a lookup owner match or sticky assignment is not found.</inlineHelpText>
    <label>Round robin disabled</label>
    <type>Checkbox</type>
</CustomField>