unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_stick_on_OOO__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_stick_on_OOO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, sticky assignment rules will be retained when a team member is out of office. If unchecked and a team member is out of office, an active sticky assignment rule will be cancelled and the object distributed to the next available member.</inlineHelpText>
    <label>Retain sticky on OoO</label>
    <type>Checkbox</type>
</CustomField>