unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_stick_on_widget_off__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_stick_on_widget_off__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, sticky assignment rules will be retained when a team member is logged out of the widget, but within working hours.</inlineHelpText>
    <label>Retain sticky on widget logout</label>
    <type>Checkbox</type>
</CustomField>