unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_treat_manual_as_rejection__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_treat_manual_as_rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a record is assigned via manual distribution, reject the previous DE assignment of the record</inlineHelpText>
    <label>Treat manual assignment as rejection</label>
    <type>Checkbox</type>
</CustomField>