unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_user_logout_disabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_user_logout_disabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable user logout</label>
    <type>Checkbox</type>
</CustomField>