unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Is_weighting_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_weighting_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked round robin team member weighting is enabled.</inlineHelpText>
    <label>Round robin weighting enabled</label>
    <type>Checkbox</type>
</CustomField>