unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Load_balancing_level__c.field-meta.xml
<CustomField>
    <fullName>n2de__Load_balancing_level__c</fullName>
    <inlineHelpText>Whether to load balance distributions across the whole team, or just within this distributor.</inlineHelpText>
    <label>Load balancing level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>