unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_dynamic_fields__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_dynamic_fields__c</fullName>
    <label>Lookup dynamic fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>