unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_filter_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_filter_field_name__c</fullName>
    <inlineHelpText>Field on the lookup object used to filter matches</inlineHelpText>
    <label>Lookup filter field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>