unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_filter_field_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_filter_field_type__c</fullName>
    <inlineHelpText>Field type of lookup filter field</inlineHelpText>
    <label>Lookup filter field type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>