unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_filter_operator__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_filter_operator__c</fullName>
    <inlineHelpText>Lookup filter operator</inlineHelpText>
    <label>Lookup filter operator</label>
    <length>60</length>
    <type>Text</type>
</CustomField>