unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_filter_value_long__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_filter_value_long__c</fullName>
    <label>Lookup filter value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>