unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_match_field_3__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_match_field_3__c</fullName>
    <label>Lookup match field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>