unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_match_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_match_field_name__c</fullName>
    <inlineHelpText>The field the unique identifier must match when performing the lookup</inlineHelpText>
    <label>Lookup match field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>