unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_object_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_object_name__c</fullName>
    <inlineHelpText>The object to lookup to find a matching record to obtain the user to assign to.</inlineHelpText>
    <label>Lookup object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>