unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_owner_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_owner_field_name__c</fullName>
    <inlineHelpText>The selected field to be used to determine the user to distribute to.</inlineHelpText>
    <label>Lookup owner</label>
    <length>60</length>
    <type>Text</type>
</CustomField>