unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Lookup_unique_id_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_unique_id_field_name__c</fullName>
    <inlineHelpText>The distributed object unique identifier field used to find a match on lookup</inlineHelpText>
    <label>Lookup unique id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>