unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Member_filter_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Member_filter_type__c</fullName>
    <description>Determines the type of member filtering for this distributor. Either select team members manually to create a sub team or use tags to limit distribution to matching team members.</description>
    <inlineHelpText>Determines the type of member filtering for this distributor. Either select team members manually to create a sub team or use tags to limit distribution to matching team members.</inlineHelpText>
    <label>Member filter type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>