unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Order_2_order_by__c.field-meta.xml
<CustomField>
    <fullName>n2de__Order_2_order_by__c</fullName>
    <inlineHelpText>Order field 2 by ascending (Asc) or decending (Desc) sequence</inlineHelpText>
    <label>Order by 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asc</fullName>
            </value>
            <value>
                <fullName>Desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>