unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Order_3_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Order_3_field_name__c</fullName>
    <inlineHelpText>3rd field to determine the sequence that objects are processed in the queue.</inlineHelpText>
    <label>Order field 3</label>
    <length>60</length>
    <type>Text</type>
</CustomField>