unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Queue_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Queue_id__c</fullName>
    <description>Salesforce Id of related queue</description>
    <inlineHelpText>The Salesforce queue that this distributor will distribute objects from.</inlineHelpText>
    <label>Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>