unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Re_assign_on_alert_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Re_assign_on_alert_sequence__c</fullName>
    <inlineHelpText>Number of the alert on which to re-assign the record</inlineHelpText>
    <label>xRe-assign on alert sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>