unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Ready_for_deletion__c.field-meta.xml
<CustomField>
    <fullName>n2de__Ready_for_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ready for deletion</inlineHelpText>
    <label>Ready for deletion</label>
    <type>Checkbox</type>
</CustomField>