unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reassign_fields_to_update_config__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassign_fields_to_update_config__c</fullName>
    <label>Reassign fields to update config</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>