unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reassign_on_alert_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassign_on_alert_sequence__c</fullName>
    <inlineHelpText>Number of the first SLA on which to re-assign the record. Reassignment will occur on this or the first subsequent SLA to be hit.</inlineHelpText>
    <label>Re-assign from SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>