unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reassign_queue_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassign_queue_id__c</fullName>
    <inlineHelpText>The Salesforce queue that this distributor will re-assign objects to.</inlineHelpText>
    <label>Re-assign to queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>