unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reassign_to_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassign_to_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce user that this distributor will re-assign objects to.</inlineHelpText>
    <label>Re-assign to user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributors_reassign</relationshipName>
    <type>Lookup</type>
</CustomField>