unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reject_field_to_update_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reject_field_to_update_value__c</fullName>
    <label>Field to update value (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>