unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reject_queue_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reject_queue_id__c</fullName>
    <label>Reject to queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>