unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reject_record_replacement_option__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reject_record_replacement_option__c</fullName>
    <label>Replace record on rejection option</label>
    <length>60</length>
    <type>Text</type>
</CustomField>