unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Reject_to_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reject_to_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reject to user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reject_distributors</relationshipName>
    <type>Lookup</type>
</CustomField>